--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../odin-recipes/index.css" />
 </head>
+
 <body>
-    <h1>Odin Recipes</h1>
-    <h3>A few recipes here</h3>
-        <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-        <li><a href="recipes/chicken-soup.html">Chicken soup recipe</a></li>
-        <li><a href="recipes/olivie.html">Olivie recipe</a></li>
-    </ul>
+    <div class="container" id="container">
+        <div class="recipe-content">
+            <h1>Odin Recipes</h1>
+            <h3>A few recipes here</h3>
+        </div>
+        <div class="recipes-pages">
+            <ul>
+                <div>
+                    <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+                    <li><a href="recipes/chicken-soup.html">Chicken soup recipe</a></li>
+                    <li><a href="recipes/olivie.html">Olivie recipe</a></li>
+                </div>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
