--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -1,26 +1,54 @@
-<main>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken soup recipe</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
     <a href="../index.html">Return to main page of recipes</a>
-    <h1 id="header">Chicken soup</h1>
-    <img src="../images/chicken-soup.jpg" style="width: 500px; height: 400px;">
-    <h3>Description</h3>
-    This homemade chicken soup recipe is well worth making — it's good for the body and the soul. How is it that plain chicken and vegetables simmered together can taste so satisfying? You don't have to be sick to deserve to enjoy it!
-    <h3>Ingredients</h3>
-    These are the simple ingredients you'll need for this chicken soup recipe:
-    <ul>
-        <li>Chicken: This homemade chicken soup starts with a 3-pound whole chicken.</li>
-        <li>Vegetables: You'll need carrots, celery, and an onion.</li>
-        <li>Seasonings: Simply season the soup with salt, pepper, and chicken bouillon granules (if you want).</li>
-    </ul>
-    <h3>How to Make Chicken soup</h3>
-    You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect when you make this easy chicken soup:
-    <ol>
-        <li>Make the stock by boiling the chicken and veggies until the meat is falling off the bone.</li>
-        <li>Remove the chicken and cut into pieces (discard skin and bones).</li>
-        <li>Strain the vegetables (reserving the stock) and cut into pieces. Rinse the pot.</li>
-        <li>Return everything to the pot. Heat the soup through and season to taste.</li>
-    </ol>
-    <strong>Optional</strong>: If you want chicken noodle soup, add cooked noodles to the pot just before serving.
-    <ul>
-        <a href="#header">Return to top</a>
-</main>
+    <div class="container" id="container">
+        <div class="recipe-card feature">
+            <img src="../images/chicken-soup.jpg" alt="Chicken soup">
+            <div class="recipe-content">
+                <h1 id="header">Chicken soup</h1>
+                <p>
+                    This homemade chicken soup recipe is well worth making — it's good for the body and the soul. How is
+                    it
+                    that
+                    plain chicken and vegetables simmered together can taste so satisfying? You don't have to be sick to
+                    deserve
+                    to enjoy it!
+                </p>
+                <h3>Ingredients</h3>
+                These are the simple ingredients you'll need for this chicken soup recipe:
+                <ul>
+                    <li>Chicken: This homemade chicken soup starts with a 3-pound whole chicken.</li>
+                    <li>Vegetables: You'll need carrots, celery, and an onion.</li>
+                    <li>Seasonings: Simply season the soup with salt, pepper, and chicken bouillon granules (if you
+                        want).
+                    </li>
+                </ul>
+                <h3>How to Make Chicken soup</h3>
+                You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect
+                when
+                you
+                make this easy chicken soup:
+                <ol>
+                    <li>Make the stock by boiling the chicken and veggies until the meat is falling off the bone.</li>
+                    <li>Remove the chicken and cut into pieces (discard skin and bones).</li>
+                    <li>Strain the vegetables (reserving the stock) and cut into pieces. Rinse the pot.</li>
+                    <li>Return everything to the pot. Heat the soup through and season to taste.</li>
+                </ol>
+                <strong>Optional</strong>: If you want chicken noodle soup, add cooked noodles to the pot just before
+                serving.
+            </div>
+            <a href="#header">Return to top</a>
+        </div>
+    </div>
+</body>
+
+</html>
