--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,31 +1,57 @@
-<main>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna recipe</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div class="return-to-main">
+        <a href="../index.html">Return to main page of recipes</a>
+    </div>
     <a href="../index.html">Return to main page of recipes</a>
-    <h1 id="header">Lasagna</h1>
-    <img src="../images/lasagna.jpg" style="width: 500px; height: 400px;">
-    <h3>Description</h3>
-    Lasagna is a popular Italian dish that consists of layers of flat pasta sheets, alternating with various fillings and sauces. The traditional version of lasagna typically includes layers of cooked pasta sheets, rich meat-based Bolognese sauce (ragù), creamy béchamel sauce, and grated Parmesan or other cheeses.
-    <h3>Ingredients</h3>
-    The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:
-    <ul>
-        <li>Meat</li>
-        <li>Onion and garlic</li>
-        <li>Tomato products</li>
-        <li>Sugar</li>
-        <li>Spices and seasonings</li>
-        <li>Lasagna noodles</li>
-        <li>Cheeses</li>
-        <li>Egg</li>
-    </ul>
-    <h3><strong>How to Make Lasagna</strong></h3>
-    <ol>
-        <li>Make the meat sauce.</li>
-        <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
-        <li>Layer the lasagna according to the recipe instructions.</li>
-        <li>Cover with foil and bake.</li>
-        <li>Let the lasagna rest before serving.</li>
-    </ol>
-    <ul>
-        <a href="#header">Return to top</a>
-</main>
+    <div class="container" id="container">
+        <div class="recipe-card feature">
+            <img src="../images/lasagna.jpg" alt="Lasagna">
+            <div class="recipe-content">
+                <h1 id="header">Lasagna</h1>
+                <p>
+                    Lasagna is a popular Italian dish that consists of layers of flat pasta sheets, alternating with
+                    various fillings and sauces. The traditional version of lasagna typically includes layers of cooked
+                    pasta sheets, rich meat-based Bolognese sauce (ragù), creamy béchamel sauce, and grated Parmesan or
+                    other cheeses.
+                </p>
+                <h3>Ingredients</h3>
+                The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can
+                easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe,
+                though, these are the ingredients you'll need to add to your grocery list:
+                <ul>
+                    <li>Meat</li>
+                    <li>Onion and garlic</li>
+                    <li>Tomato products</li>
+                    <li>Sugar</li>
+                    <li>Spices and seasonings</li>
+                    <li>Lasagna noodles</li>
+                    <li>Cheeses</li>
+                    <li>Egg</li>
+                </ul>
+                <h3><strong>How to Make Lasagna</strong></h3>
+                <ol>
+                    <li>Make the meat sauce.</li>
+                    <li>Cook the noodles.</li>
+                    <li>Make the ricotta mixture.</li>
+                    <li>Layer the lasagna according to the recipe instructions.</li>
+                    <li>Cover with foil and bake.</li>
+                    <li>Let the lasagna rest before serving.</li>
+                </ol>
+                <ul>
+            </div>
+            <a href="#header">Return to top</a>
+        </div>
+    </div>
+</body>
+
+</html>
