--- a/index.html
+++ b/index.html
@@ -5,23 +5,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="../odin-recipes/index.css" />
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <header>
+        <div class="header_logo"><a href="index.html">ODIN RECIPES</a></div>
+        <nav>
+            <ul class="header_items_list">
+                <li class="header_search"><a href="#">Search</a></li>
+                <li class="header_logout"><a href="#">Logout</a></li>
+                <li class="header_profile"><a href="#">Profile</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
     <div class="container" id="container">
         <div class="recipe-content">
             <h1>Odin Recipes</h1>
             <h3>A few recipes here</h3>
-        </div>
-        <div class="recipes-pages">
-            <ul>
-                <div>
-                    <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-                    <li><a href="recipes/chicken-soup.html">Chicken soup recipe</a></li>
-                    <li><a href="recipes/olivie.html">Olivie recipe</a></li>
-                </div>
-            </ul>
+            <div class="recipe-pages">
+                <ul>
+                    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                    <li><a href="recipes/chicken-soup.html">Chicken soup</a></li>
+                    <li><a href="recipes/olivie.html">Olivie</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
