--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -5,14 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken soup recipe</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="recipes.css" />
 </head>
 
 <body>
-    <a href="../index.html">Return to main page of recipes</a>
+    <header class="header" id="header">
+        <div class="header_logo">
+            <a href="../index.html">ODIN RECIPES</a>
+            <a href="../index.html">Return to main</a>
+        </div>
+        <nav>
+            <ul class="header_items_list">
+                <li class="header_search"><a href="#">Search</a></li>
+                <li class="header_logout"><a href="#">Logout</a></li>
+                <li class="header_profile"><a href="#">Profile</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
     <div class="container" id="container">
         <div class="recipe-card feature">
-            <img src="../images/chicken-soup.jpg" alt="Chicken soup">
+            <img src="../images/chicken-soup.jpg" alt="Chicken soup" class="gallery_image">
             <div class="recipe-content">
                 <h1 id="header">Chicken soup</h1>
                 <p>
@@ -46,7 +59,7 @@
                 <strong>Optional</strong>: If you want chicken noodle soup, add cooked noodles to the pot just before
                 serving.
             </div>
-            <a href="#header">Return to top</a>
+            <a href="#header">Return to top</a><a href="../index.html">Save recipe</a>
         </div>
     </div>
 </body>
