--- a/recipes/olivie.html
+++ b/recipes/olivie.html
@@ -45,7 +45,7 @@
                     <li>½ teaspoon salt</li>
                     <li>ground black pepper to taste</li>
                 </ul>
-                <h3><strong>How to Make Olivie</strong></h3>
+                <h3>How to Make Olivie</h3>
                 <ol>
                     <li>Place potatoes and carrots into a large pot and cover with salted water; bring to a boil. Reduce
                         heat to medium-low and simmer until tender, about 15 minutes. Drain and rinse with cold water
